--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/src/index.js",
+    "build": "npm install &&  npm --prefix client && npm run build --prefix client",
     "server": "nodemon server/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
