--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "node-fetch": "^3.3.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
