--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "mongoose": "^8.8.3",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
+    "qrcode": "^1.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
