--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.1",
     "chart.js": "^4.4.6",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "tailwindcss": "^3.4.14"
   }
 }
