--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,21 @@
     "@types/react-dom": "^18.3.1",
     "chart.js": "^4.4.6",
     "formik": "^2.4.6",
+    "framer-motion": "^11.18.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.459.0",
+    "motion": "^11.18.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-paystack": "^6.0.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
+    "swiper": "^11.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
