--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.1",
+    "html2pdf.js": "^0.10.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.459.0",
     "motion": "^11.18.1",
