--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/src/index.js",
-    
     "build": "npm install && npm --prefix client install --legacy-peer-deps && npm --prefix client run build",
     "server": "nodemon server/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,6 +28,7 @@
     "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
