added moderator role

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "chart.js": "^4.4.6",
+    "client": "file:",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.1",
@@ -20,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.459.0",
     "motion": "^11.18.1",
+    "photographers-association-membership-application": "file:..",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
