--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "npm install --legacy-peer-deps && react-scripts build",
+    "postinstall": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
