Fix:Refactored vercel.jos file

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "installCommand": "npm install",
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "server/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "src/**/*",
-      "use": "@vercel/static"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/server/index.js"
+    }
+  ]
 }
