--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/app.js",
+      "src": ".server/src/app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "./src/app.js",
+      "src": "./server/src/(.*)",
+      "dest": "./server/src/app.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
   ]
