--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": ".server/src/app.js",
+      "src": "server/src/app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "./server/src/(.*)",
-      "dest": "./server/src/app.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "src": "/(.*)",
+      "dest": "/server/src/app.js"
     }
   ]
 }
