Refactor backend for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server/src/app.js"
+      "dest": "/server/src/app.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
   ]
 }
