Refactor backend for vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server/src/app.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "dest": "/server/src/app.js"
     }
   ]
 }
