--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/lamodots/Photographers-Association-Membership-Application#readme",
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.6",
     "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
